# msgorch

./: .env.example  .gitignore  Cargo.toml  README.md  todo.md
docs/: contexto_desarrollo.json  contexto_desarrollo.md  event-chats.update.json  event-contacts.update.json  event-message.upsert.json  event_message_from_webhook.json  eventos.md  ia_context.md
docs/eventos/: event-connection.update.json  event-contacts.update.json  event-messages.update.json  event-send.message.json
docs/eventos/enviar_mensaje/: 1.send.message.json  2.message.update.json  3.chats.upsert.json  4.message.update.json
docs/migraciones/: 1 inicial.sql
migrations/: 20251224081437_create_incoming_messages.down.sql  20251224081437_create_incoming_messages.up.sql  20251224081437_messages.up.sql  20251231051759_clients.up.sql  20260102194120_instances.up.sql
src/: app.rs  config.rs  db.rs  events.rs  handlers.rs  idempotency.rs  lib.rs  main.rs  middleware.rs  models.rs
src/db/: pool.rs  repositories.rs
src/db/repositories/: messages.rs  repository_error.rs
src/events/: chats_update.rs  connection_update.rs  debug_event.rs  dispatcher.rs  events.rs  message_delete.rs  message_processor.rs  message_update.rs  message_upsert.rs  presence_update.rs
src/handlers/: message.rs  webhook.rs
src/models/: api.rs  domain.rs  evolution.rs  message.rs  messages.rs  modanterior  stored_messages.rs  webhook.rs
src/models/api/: api_envelope.rs  api_message.rs
src/models/domain/: client.rs  incoming_message.rs
src/services/: evolution.rs
tests/: helpers.rs  webhook.rs
(+5 files in other folders)
