[package]
name = "msgorch"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
chrono = { version = "0.4.42", features = ["serde"] }
deadpool-redis = "0.22.0"
dotenvy = "0.15.7"
rand = "0.9.2"
redis = "1.0.1"
reqwest = { version = "0.12.26", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "chrono"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["fmt"] }

[dev-dependencies]
reqwest = "0.12.26"
serde_json = "1.0.145"
wiremock = "0.6.5"
